<resources>
    <!--Main-->
    <string name="app_name">ShoeStore</string>
    <string name="menu_item_log_out">Log Out</string>

    <!--Login Fragment-->
    <string name="login_hint_user">Enter your username here</string>
    <string name="login_hint_password">Enter your password here</string>
    <string name="login_button">Login</string>
    <string name="login_button_create">Create Account</string>

    <!--Onboarding Fragment-->
    <string name="onboarding_button">See Instructions</string>
    <string name="onboarding_welcome">Welcome to the shoe app! Click below for instructions!</string>
    <string name="onboarding_shoe_store">Shoe Store</string>

    <!--Instructions Fragment-->
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">Press below to see all the shoes</string>
    <string name="instructions_button">See Shoes</string>

    <!--Shoe Listing Fragment-->
    <string name="shoe_details_add_shoe">submit</string>

    <!--Shoe Details Fragment-->
    <string name="shoe_details_title_text">Fill in shoe details</string>
    <string name="shoe_details_name">Name</string>
    <string name="shoe_details_size">Size</string>
    <string name="shoe_details_company">Company</string>
    <string name="shoe_details_description">Description</string>
    <string name="shoe_details_button_save_changes">Save Changes</string>
    <string name="shoe_details_button_discard_changes">Discard Changes</string>
</resources>
